--- a/src/app/pages/settings/settings.html
+++ b/src/app/pages/settings/settings.html
@@ -158,7 +158,7 @@
         <button type="button" class="secondary" (click)="exportData()">Export Data</button>
     </section>
     
-    <section class="horizontal-section save-button">
+    <section class="save-buttons">
       <button type="submit" class="primary">Save Settings</button>
       <button type="button" class="secondary" (click)="resetSettings()">Reset to Defaults</button>
     </section>
