--- a/src/app/components/search-filter/search-filter.css
+++ b/src/app/components/search-filter/search-filter.css
@@ -2,11 +2,11 @@
 
 /* Search Input Styles */
 .search-container {
-  display: flex;
+  /* display: flex; */
   /* align-items: center; */
   /* gap: 8px; */
   /* margin-bottom: 15px; */
-  position: relative;
+  /* position: relative; */
 }
 
 .search-input {
@@ -34,7 +34,7 @@
   background: none;
   border: 1px solid var(--g3-color);
   border-radius: 50%;
-  width: 1.5rem;
+  /* width: 1.5rem; */
   height: 1.5rem;
   display: flex;
   align-items: center;
@@ -185,7 +185,7 @@
   color: var(--g1-color);
   cursor: pointer;
   transition: all 0.3s ease;
-  width: 9.375rem;
+  width: 7.5rem;
 }
 
 .date-input:focus {
@@ -235,8 +235,8 @@
   }
   
   .search-input {
-    flex: 1;
-    width: auto;
+    /* flex: 1;
+    width: auto; */
   }
   
   .date-input {
