--- a/src/app/components/association-list/association-list.css
+++ b/src/app/components/association-list/association-list.css
@@ -23,7 +23,8 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 5px;
+  /* gap: 5px; */
+  padding: 10px;
   border: 2px solid var(--g4-color);
   border-radius: 0.5rem;
 }
