--- a/src/app/details/story-details/story-details.css
+++ b/src/app/details/story-details/story-details.css
@@ -1,7 +1,12 @@
 
-.story-description {
-  margin-bottom: 25px;
-
-  height: fit-content;
+.details-description {
   width: 100%;
+  height: 300px;
+  resize: vertical;
+  padding: 10px;
+  font-size: small;
+  border-bottom: 1px solid var(--g3-color);
+  border-radius: 5px;
+  box-sizing: border-box;
+  font-family: inherit;
 }
