--- a/src/app/details/story-details/story-details.html
+++ b/src/app/details/story-details/story-details.html
@@ -17,25 +17,25 @@
                             
                         <div class="details-section">
                             <label class="primary-label" for="story-description">Story Description</label>
-                            <textarea id="story-description" class="large-textarea" formControlName="storyDescription" placeholder="Describe the plot, themes, and key events of this story..."></textarea>
+                            <textarea id="story-description" class="details-description" formControlName="storyDescription" placeholder="Describe the plot, themes, and key events of this story..."></textarea>
                         </div>
                     </div>
-                        <app-association-list
-                            [items]="getCharactersAssociationList()"
-                            [label]="'Story Characters'"
-                            [type]="'character'"
-                            (itemToggled)="onCharacterToggle($event)">
-                        </app-association-list>
-                        <app-association-list
-                            [items]="getLocationsAssociationList()"
-                            [label]="'Story Locations'"
-                            [type]="'location'"
-                            (itemToggled)="onLocationToggle($event)">
-                        </app-association-list>
-                        <div class="details-section secondary-section">
-                            <label class="primary-label" for="story-tags">Story Tags</label>
-                            <textarea class="small-textarea" id="story-tags" formControlName="storyTags" placeholder="Enter tags separated by commas..."></textarea>
-                        </div>
+                    <app-association-list
+                        [items]="getCharactersAssociationList()"
+                        [label]="'Story Characters'"
+                        [type]="'character'"
+                        (itemToggled)="onCharacterToggle($event)">
+                    </app-association-list>
+                    <app-association-list
+                        [items]="getLocationsAssociationList()"
+                        [label]="'Story Locations'"
+                        [type]="'location'"
+                        (itemToggled)="onLocationToggle($event)">
+                    </app-association-list>
+                    <div class="details-section secondary-section">
+                        <label class="primary-label" for="story-tags">Story Tags</label>
+                        <textarea class="small-textarea" id="story-tags" formControlName="storyTags" placeholder="Enter tags separated by commas..."></textarea>
+                    </div>
                     
                     <button type="submit" class="save-button primary">Save</button>
                 </section>
