--- a/src/app/components/relationship-list/relationship-list.css
+++ b/src/app/components/relationship-list/relationship-list.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   /* gap: 15px; */
-  width: 100%;
+  /* width: 100%; */
 }
 .relationship-filters {
   display: flex;
@@ -51,6 +51,7 @@
 .relationship-grid-container {
   padding: 10px;
   /* width: 95%; */
+  width: auto;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 10px;
