--- a/src/app/components/thumbnail/story-thumbnail/story-thumbnail.css
+++ b/src/app/components/thumbnail/story-thumbnail/story-thumbnail.css
@@ -1,5 +1,20 @@
+
 .story-thumbnail {
-  /* width: fit-content; */
   width: 15rem;
   min-height: 15rem;
 }
+
+.story-thumbnail.hasSubstories {
+  /* border: 2px solid var(--accent-color, #4a90e2);
+  box-shadow: 0 2px 12px rgba(74, 144, 226, 0.10);
+  background: #f5faff; */
+  width: auto;
+}
+
+.thumbnail-substories {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  flex-direction: row;
+  gap: 8px;
+} 
