--- a/src/app/components/thumbnail/story-thumbnail/story-thumbnail.html
+++ b/src/app/components/thumbnail/story-thumbnail/story-thumbnail.html
@@ -1,4 +1,5 @@
-<div class="story-thumbnail world-thumbnail story" [routerLink]="['/story', worldStory().id]">
+
+<div class="story-thumbnail world-thumbnail story" [ngClass]="{ 'hasSubstories': substories && substories.length > 0 }" [routerLink]="['/story', worldStory().id]">
     <div class="thumbnail-header">
         <h4 class="thumbnail-title">{{ worldStory().title }}</h4>
         <button class="thumbnail-delete-button" (click)="deleteStory(worldStory().id, $event)">Delete</button>
@@ -21,6 +22,17 @@
             <div class="thumbnail-paragraph">{{ paragraph }}</div>
         }
     </div>
+
+    @if (substories && substories.length > 0) {
+        <div class="thumbnail-substories">
+            @for (substory of substories; track substory.id) {
+                <app-substory-thumbnail
+                    [substory]="substory">
+                </app-substory-thumbnail>
+            }
+        </div>
+    }
+
     <div class="thumbnail-tag-container">
     @for (tag of worldStory().tags; track tag) {
         <div class="tag" (click)="onTagClick(tag, $event)">{{ tag }}</div>
