thumbnails are fixed

--- a/src/app/components/thumbnail/event-thumbnail/event-thumbnail.html
+++ b/src/app/components/thumbnail/event-thumbnail/event-thumbnail.html
@@ -15,15 +15,15 @@
         </div>
     }
     
-    @if (showCharacters() && worldEvent().characters.length > 0) {
+    @if (showCharacters() && characterNames.length > 0) {
         <div class="thumbnail-characters thumbnail-info">
-            {{ worldEvent().characters.join(', ') }}
+            {{ characterNames.join(', ') }}
         </div>
     }
     
-    @if (showStories() && worldEvent().stories.length > 0) {
+    @if (showStories() && storyTitles.length > 0) {
         <div class="thumbnail-stories thumbnail-info">
-            {{ worldEvent().stories.join(', ') }}
+            {{ storyTitles.join(', ') }}
         </div>
     }
 
